# django-frontend-demo

./: .env.dist  .gitignore  docker-compose.yml  pyproject.toml
.docker/fullfii_admin_demo/: Dockerfile
common/: view_helpers.py  view_mixin.py
common/api/: api_client.py  api_errors.py  api_results.py
common/states/: pagination_state.py  sort_state.py
common/templatetags/: list_tags.py
components/pagination/: pagination.py  template.html
components/sort_header/: sort_header.py  template.html
components/toast_messages/: template.html  toast_messages.py
config/: settings.py  urls.py
mail/: forms.py  urls.py  views.py
mail/templates/mail/: detail.html  index.html  new.html
templates/: 403.html  404.html  500.html  base.html
templates/components/: pagination_footer.html
