[tool.poetry]
name = "django-frontend-demo"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.*"
requests = "^2.32.3"
django-bootstrap5 = "^24.3"
django-environ = "^0.11.2"
django-components = "^0.122"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"
djlint = "^1.36.3"
responses = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,"
extend-exclude = ["*/migrations/*", ".venv"]

[tool.black]
target-version = ["py312"]
line-length = 120
force-exclude = """
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .venv
)
"""

[tool.isort]
profile = "black"
py_version = 312
line_length = 120
skip_glob = ["**/migrations", ".venv"]

[tool.djlint]
profile = "django"
indent = 2
extend_exclude = ".venv"
blank_line_after_tag = "load,extends,endblock"
blank_line_before_tag = "load,extends,block,macro"
ignore = "H030,H031"
format_css = true
format_js = true

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
